parser/src/test/resources/corpus/valid/46_sum_by.ff
rule "Sum By" {
  let total = sum of fee by share class
  let raw_total = sum of fee
}
