parser/src/test/resources/corpus/invalid/49_sum_no_expr.ff
rule "Sum No Expr" {
  let x = sum of
}
